--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -129,19 +129,65 @@ html {
     box-shadow: none !important;
   }
   .product-card {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: -40px;
+    width: 100%;
   }
   .card-product {
-    display: inline-block;
+    width: 150px !important;
   }
   .menu-short {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
   }
   .sort-product {
     margin-right: 20px;
+  }
+  .all-product {
+    margin-top: 40px;
+    align-items: center;
+    margin-left: 10%;
+    /* margin-right: auto; */
+  }
+  .card {
+    border-top: none !important;
+    width: 140px !important;
+    margin-right: 23px;
+    height: 220px;
+    margin-bottom: 40px;
+    box-shadow: 0px 2px 2px black;
+    cursor: pointer !important;
+    transition: all 0.1s ease-in-out;
+  }
+  .card:hover {
+    transform: scale(1.1) !important;
+  }
+  .img-product {
+    position: absolute;
+    top: -20px;
+    width: 140px;
+    height: 140px;
+    margin-left: -1px;
+    margin-bottom: 20px;
+    border-radius: 120px;
+  }
+  .card {
+    border-radius: 40px;
+  }
+  .product-title {
+    font-size: 22px;
+    font-weight: 900;
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 125px;
+    line-height: 20px;
+  }
+  .product-price {
+    margin-top: -10px;
+    color: #6a4029;
+    font-size: 16px;
   }
   /* end product */
 }
