Edit Cupon 50% finish

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -84,6 +84,7 @@ html {
     text-align: left;
     margin-bottom: 20px;
     padding-left: 20px;
+    background-color: #88b788;
   }
 
   .cupon-image {
